INTYGFV-15872: Minor adjustments based on review.